<resources>
    <string name="app_name">EGLISA OFFICIAL</string>
    <string name="EGLISIA_WELCOME"> WELCOME TO EGLISIA</string>
    <string name="action_settings">Settings</string>
    <string name="about_story"> The EGLISA developed in January 2016.
             By Bonsy Adjei-Arthur in the University of Ghana
               MultiUsable App</string>
    <string name="member">   BECOME A MEMBER</string>
    <string name="ministryjoining"> which ministry would you like to join ?</string>
    <string name="title_activity_map__view">Map</string>
          <string name="select_church"> Select church </string>
    <string name="Profilename">Peeman Arthur</string>
    <string name="dateposted">date posted</string>
    <string-array name="Churches">
     <item>Ligthhouse Chapel International </item>
     <item>  KICC </item>
     <item>  Winners Chapel </item>
     <item>   Church of Pentecost </item>
     <item>    Anglican Church </item>
     <item>  Roman Catholic </item>
     <item>  Methodist Church </item>
     <item>    Presbyterian Church</item>
     <item>   Assemblies of God</item>
     <item>     Action Chapel International</item>
     <item>     Baptist Church </item>
     <item>  Envangelical Presbyterian Church</item>
     <item>  Church of Christ</item>
     <item>    Apostolic Church of Ghana</item>

 </string-array>
    <string-array name="Countries">
        <item> Afghanistan
         </item>
        <item> Argentina</item>
        <item> Angola </item>
        <item> Bahamas</item>
        <item> Belgium</item>
        <item> Bahrain</item>
        <item> Bolivia</item>
        <item> Brazil</item>
        <item> Cuba </item>
        <item> Ivory Coast</item>
        <item> Canada </item>
        <item> Denmark </item>
        <item> England </item>
         <item> Ethiopia </item>
        <item> Eritrea</item>
        <item> France </item>
        <item> Germany </item>
        <item> Ghana </item>
        <item> Guinea</item>
        <item> Guinea-Bissau</item>
        <item> India </item>
        <item> Indonesia </item>
        <item> Italy</item>
        <item> Jamaica</item>
        <item> Japan</item>
         <item> Kazakhstan</item>
        <item> Kenya</item>
        <item> Libya </item>
       <item> Lesotho</item>
        <item> Liberia </item>
        <item> Malta</item>
        <item> Mauritania </item>
         <item> Madagascar </item>
        <item> Norway</item>
        <item> Nigeria </item>
        <item> North- Koria</item>
        <item> New Zealand </item>
        <item> Namibia </item>
        <item> Oman </item>
        <item> Pakistan </item>
        <item> Porland </item>
        <item> Portugal </item>
        <item> Peru</item>
         <item> Quatar</item>
        <item> Russia</item>
        <item> Romania </item>
        <item> Rwanda </item>
        <item> Spain</item>
        <item> Slovakia </item>
        <item> Sudan </item>
        <item> Sao Tome Principe</item>
        <item> South- Afica</item>
        <item> Somalia </item>
        <item> Switzerland </item>
        <item> Tanzania</item>
        <item> Tuvau</item>
        <item> Tonga</item>
        <item> Togo</item>
        <item> Tunisia </item>
        <item> Trinidad and Tobago</item>
        <item> Turkey</item>
        <item> Uganda</item>
        <item> Uruguay </item>
        <item> United States Of America </item>
          <item> Ukraine</item>
         <item> Venezuela</item>
        <item> Vanuatu</item>
               <item>Zambia </item>
        <item> Zimbabwe </item>
      </string-array>
    <string-array name="ministry1">
        <item> Visitation </item>
    <item>   Ushering </item>
    <item>  Music </item>

    </string-array>
    <string name="action_set"> Settings</string>
    <string name="back">BACK</string>
    <string name="hi_music_lover_its_so_much_exciting_knowing_you_are_all_well_and_excited_today_well_just_to_know_the_whats_going_on_in_the_music_department_read_here">Hi! Music lover,its so much exciting knowing you are all well and excited today, well just to know the whats going on in the music department READ HERE</string>
    <string name="info_pane">INFO PANE</string>
    <string name="music_department">MUSIC DEPARTMENT</string>
    <string name="rehearsal_room">REHEARSAL ROOM</string>
    <string name="see_songs_for_the_week">SEE SONGS FOR THE WEEK</string>
    <string name="view_membership">VIEW MEMBERSHIP</string>
    <string name="chats">CHATS</string>
    <string name="fellowship_room">FELLOWSHIP ROOM</string>
    <string name="profile">PROFILE</string>
    <string name="subject">SUBJECT</string>
    <string name="trending">TRENDING</string>
    <string name="back1">BACK</string>
    <string name="find_your_church">Find Your Church</string>
    <string name="location">Location</string>
    <string name="next">NEXT</string>
    <string name="name_of_church">Name of Church</string>
    <string name="suscribe">SUSCRIBE</string>
    <string name="accountnumber">Accountnumber</string>
    <string name="bank_name">BANK NAME</string>
    <string name="name">Name</string>
    <string name="send_funds">SEND FUNDS</string>
    <string name="announcement">Announcement</string>
    <string name="quote_of_the_week">QUOTE OF THE WEEK</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="sermon">SERMON</string>
    <string name="set_up_profile_picture">SET UP PROFILE PICTURE</string>
    <string name="the_lord_shall_fight_for_you_and_ye_shall_hold_your_peace_exodus_14_14">The Lord shall fight for you and ye shall hold your peace Exodus 14:14</string>
    <string name="view_album">View Album</string>
    <string name="play">play</string>
    <string name="selfprofile">selfprofile</string>
    <string name="history_of_oduom_cop_kumasi">HISTORY OF ODUOM COP- KUMASI</string>
    <string name="so">so</string>
    <string name="bawa_ndum">Bawa Ndum</string>
    <string name="first_leader">FIRST LEADER</string>
    <string name="indiana_jones_kwakye">Indiana Jones Kwakye</string>
    <string name="leaders_of_the_week">LEADERS OF THE WEEK</string>
    <string name="second_leader">SECOND LEADER</string>
    <string name="cancel">CANCEL</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="password2">Password</string>
    <string name="register">REGISTER</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_here">SIGN IN HERE</string>
    <string name="fill_credentials">fill credentials</string>
    <string name="send">Send</string>
    <string name="login1">login</string>
    <string name="eglisa_centrale">EGLISA CENTRALE</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="get_info">GET INFO</string>
    <string name="login3">LOGIN</string>
    <string name="name2">Name</string>
    <string name="view">VIEW</string>
    <string name="email2">email</string>
    <string name="music">music</string>
    <string name="password3">password</string>
    <string name="tel_no">tel no.</string>
    <string name="ushering">ushering</string>
    <string name="visitation">visitation</string>
    <string name="department">DEPARTMENT</string>
    <string name="email3">EMAIL</string>
    <string name="names">NAMES</string>
    <string name="refresh">Refresh</string>
    <string name="tel">TEL</string>
    <string name="back2">BACK</string>
    <string name="hi_music_lover_its_so_much_exciting_knowing_you_are_all_well_and_excited_today_well_just_to_know_the_whats_going_on_in_the_music_department_read_here1">Hi! Music lover,its so much exciting knowing you are all well and excited today, well just to know the whats going on in the music department READ HERE</string>
    <string name="info_pane2">INFO PANE</string>
    <string name="music_department2">MUSIC DEPARTMENT</string>
    <string name="rehearsal_room1">REHEARSAL ROOM</string>
    <string name="see_songs_for_the_week2">SEE SONGS FOR THE WEEK</string>
    <string name="view_membership2">VIEW MEMBERSHIP</string>
    <string name="names_music_division">NAMES- music division</string>
    <string name="refresh2">Refresh</string>
    <string name="music_members">MUSIC MEMBERS</string>
    <string name="refresh3">Refresh</string>
    <string name="back4">BACK</string>
    <string name="song_pane">SONG PANE</string>
    <string name="set_as_wallpaper">SET AS WALLPAPER</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="upload">Upload</string>
    <string name="all_my_groups">All my groups</string>
    <string name="send_us_your_prayer_request">SEND US YOUR PRAYER REQUEST</string>
    <string name="write_here">Write Here</string>
    <string name="name3">name</string>
    <string name="send_request">send request</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="funding">FUNDING</string>
    <string name="other">OTHER</string>
    <string name="surname">SURNAME</string>
    <string name="surname1">SURNAME</string>
    <string name="surname11">surname</string>
    <string name="comment">COMMENT</string>
    <string name="it_is_not_tne_same_thing_again_and_again">It is not tne same thing again and again</string>
    <string name="topic_for_discussion">TOPIC FOR DISCUSSION</string>
    <string name="agree">agree</string>
    <string name="reply">reply</string>
    <string name="announcement4">Announcement</string>
    <string name="quote_of_the_week2">QUOTE OF THE WEEK</string>
    <string name="send_message2">SEND MESSAGE</string>
    <string name="sermon2">SERMON</string>
    <string name="set_up_profile_picture2">SET UP PROFILE PICTURE</string>
    <string name="the_lord_shall_fight_for_you_and_ye_shall_hold_your_peace_exodus_14_142">The Lord shall fight for you and ye shall hold your peace Exodus 14:14</string>
    <string name="view_album2">View Album</string>
    <string name="play2">play</string>
    <string name="selfprofile2">selfprofile</string>
    <string name="new_texte">New Texte</string>
    <string name="team_listings">Team listings</string>
    <string name="about_developers">About Developers</string>
    <string name="action_page">ACTION PAGE</string>
     <string name="pref_sync_key"> pref_sync</string>
    <string name="SyncData_title"> Sync Data </string>
      <string name="summary_key"> You need to sync your data to ensure good performance</string>
        <string name="defaultValue">true</string>
    <string name="pref_location_title"> Location</string>
    <string name="pref_location">pref_location</string>
    <string name="pref_location_edit_title">pref_location_label </string>
    <string name="pref_location_edit_key">pref_location_key </string>
    <string name="locationdefaultvalue"> true </string>
    <string name="pref_storage_title">Storage </string>
    <string name="pref_storage_key"> pref_storage</string>
    <string name="sync_list_preference_defaultvalue"> true </string>
    <string name="sync_list_pref_dialogTitle"> Preference Sync Connection Type</string>
    <string name="sync_list_pref_title">Preference Sync Connection Type</string>
    <string name="sync_pref_pref_syncConnectionType"> pref_syncConnectionType </string>
    <string name="postal_code">postalcode_key </string>
    <string name="now_write_your_amazing_quote">Now write your amazing quote</string>
    <string name="post_quote">POST QUOTE</string>
    <string name="the_quote_date_goes_here">the quote date goes here</string>
    <string name="the_quote_title_goes_here">the quote title goes here</string>
    <string name="now_write_announcement">Now write announcement</string>
    <string name="post_announcement">POST ANNOUNCEMENT</string>
    <string name="the_annoucement_date_goes_here">the annoucement date goes here</string>
    <string name="the_event_title_goes_here">the event title goes here</string>
</resources>