<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkchurchwall"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/sendannouncementimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="14dp"
        android:background="#00ffffff"
        android:contentDescription=""
        app:srcCompat="@drawable/camerabutton1"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/sendannouncementtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/the_event_title_goes_here"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/sendannouncentdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/the_annoucement_date_goes_here"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/sendannouncementdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/now_write_announcement"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/sendannouncementpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPressedHighlight"
        android:text="@string/post_announcement" />


</LinearLayout>